# ErrorDashboardClient

./: .env.development.local  .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: main.yml
src/: app.rs  main.rs  routes.rs
src/components/: mod.rs
src/components/Button/: button.rs  style.rs
src/components/base/: mod.rs
src/components/base/Button/: button.rs  style.rs
src/components/composite/navbar/: navbar.rs  style.rs
src/components/composite/navbar/subcomponents/navbutton/: mod.rs  navbutton.rs  style.rs
src/components/navbar/: mod.rs  navbar.rs  style.rs
src/configs/: env.rs
src/globals/dtos/: user_dtos.rs
src/hooks/: use_form.rs  use_mutation.rs  use_query.rs
src/views/dashboard/: dashboard_page.rs
src/views/home/: home_page.rs
src/views/login/: login_page.rs
src/views/register/: registration_page.rs
