[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
stylist = { version = "0.12.1", features = ["yew_integration"] }
log = "0.4.6"
wasm-logger = "0.2.0"
yew-router = "0.17"
dotenv = "0.15"

[[bin]]
name = "app"
path = "src/main.rs"
