[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
anyhow = "1.0.75"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
stylist = { version = "0.12.1", features = ["yew_integration"] }
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
gloo-net = "0.4.0"
gloo = "0.3"
web-sys = "0.3.64"
yew-router = "0.17"
dotenv = "0.15"

[[bin]]
name = "app"
path = "src/main.rs"
